<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|bottom"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/nav_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/monbaiti"
            android:text="@string/nav_header_text"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@drawable/lock_with_shield" />
    </RelativeLayout>


    <ImageView
        android:id="@+id/drawer_2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:scaleType="fitXY"
        android:src="@drawable/nav_preimium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="top|left"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/how_to_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/how_to_use"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/share"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/share" />


        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/loader_privacy"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/privacy_policy" />

        <TextView
            android:id="@+id/rate_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/rate_us"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/rate_us"
            />

        <TextView
            android:id="@+id/contact_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/contact_us"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/contact_us" />

        <TextView
            android:id="@+id/more_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:text="@string/more_apps"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/more_app" />

    </LinearLayout>


    <TextView
        android:id="@+id/quite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:drawablePadding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_100sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/nav_quite"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/quite" />


</LinearLayout>