<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Views.Activity.LoaderActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_icons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/loader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/splash_logo"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/app_locker" />

        <ImageView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:padding="@dimen/_5sdp"
            android:scaleType="centerInside"
            android:src="@drawable/stolks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splash_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        app:layout_constraintBottom_toTopOf="@+id/start_free_trial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_icons">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/splash_animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading"
            app:lottie_speed="@integer/material_motion_duration_short_1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/start_free_trial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/continueBtn"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginLeft="@dimen/_32sdp"
            android:layout_marginRight="@dimen/_32sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:background="@drawable/button_primary"
            android:text="@string/lets_start"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/continueBtn">

            <TextView
                android:id="@+id/termstext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gt_walsheim_pro"
                android:textStyle="normal"
                android:textSize="14sp"
                android:textColor="#666666"
                android:lineSpacingExtra="6sp"
                android:gravity="center_horizontal"
                android:text="@string/loader_privacy"
                app:layout_constraintStart_toEndOf="@+id/space"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/space"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="|"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:textColor="@color/text_color"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/privacytext"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/privacytext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gt_walsheim_pro"
                android:textStyle="normal"
                android:textSize="14sp"
                android:textColor="#666666"
                android:lineSpacingExtra="6sp"
                android:gravity="center_horizontal"
                android:text="@string/loader_terms_condition"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
=
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>